# DevOps-Engineer-Assignment

./: README.md  command.sh  commands.sh  docker-build.sh  infrastructure-setup.sh  ocr-model-monitoring-dashboard.json  old-docker-build.sh
api-gateway/: Dockerfile  api-gateway.py  pyproject.toml
argo-crd/: ocr-app-project.yaml  ocr-applicationset.yaml
helm/: api-gateway-0.1.0.tgz  ocr-model-0.1.0.tgz
helm-values/: grafana-values.yaml  prometheus-values.yaml
helm/api-gateway/: values.yaml
helm/api-gateway/templates/: configmap.yaml  deployment.yaml  service.yaml
helm/ocr-model/: Chart.yaml  values.yaml
helm/ocr-model/templates/: NOTES.txt  deployment.yaml  service.yaml
ocr-model/: Dockerfile  pyproject.toml
